--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@nuxt/ui": "^4.2.1",
     "eslint": "^9.39.1",
     "nuxt": "^4.2.2",
-    "typescript": "^5.9.3",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.1.8"
   }
 }
