--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@nuxt/eslint": "^1.12.1",
     "@nuxt/ui": "^4.2.1",
+    "@tailwindcss/vite": "^4.1.18",
     "eslint": "^9.39.1",
     "nuxt": "^4.2.2",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
