--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.12.1",
+    "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.2.1",
     "@tailwindcss/vite": "^4.1.18",
     "eslint": "^9.39.1",
